--- a/contactus.html
+++ b/contactus.html
@@ -93,7 +93,68 @@
               <h3>Send us your Feedback</h3>
            </div>
             <div class="col-12 col-md-9">
-                Form goes here
+                <form>
+                    <div class="form-group row"> <!-- First Name Form -->
+                        <label for="firstname" class="col-md-2 col-form-label">First Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
+                        </div>
+                    </div> <!-- END First Name Form -->
+                    <div class="form-group row">  <!-- Last Name Form -->
+                        <label for="lastname" class="col-md-2 col-form-label">Last Name</label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name">
+                        </div>
+                    </div> <!-- END Last Name Form -->
+
+                    <div class="form-group row"> <!-- Tel. Number Form -->
+                        <label for="telnum" class="col-md-2 col-form-label"> Contact Tel. </label>
+                        <div class="col-5 col-sm-4 col-md-3"><!--  Area Code -->
+                            <div class="input-group">
+                                <div class="input-group-addon">(</div>
+                                <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area Code">
+                                <div class="input-group-addon">)</div>
+                            </div>
+                        </div> <!-- END  Area Code -->
+                        <div class="col-7 col-sm-6 col-md-7"> 
+                            <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel. number">
+                        </div>
+                    </div> <!-- END Tel. Number Form -->
+
+                    <div class="form-group row">
+                        <label for="emailid" class="col-md-2 col-form-label"> Email </label>
+                        <div class="col-md-10">
+                            <input type="email" class="form-control" id="emailid" name="emailid" placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="form-group row"> <!-- Checkbox and Selection -->
+                        <div class="form-check col-md-6 offset-md-2">
+                            <label class="form-check-label">
+                                <input type="checkbox" class="form-check-input" name="approve" value="">
+                                 <strong> May we contact you?</strong>
+                            </label>
+                        </div>
+                        <div class="col-md-3 offset-md-1">
+                            <select class="form-control">
+                                <option>Tel.</option>
+                                <option>Email</option>
+                            </select>
+                        </div>
+                    </div> <!-- END Checkbox and Selection -->
+
+                    <div class="form-group row">
+                        <label for="feedback" class="col-md-2 col-form-label"> Your Feedback </label>
+                        <div class="col-md-10">
+                            <textarea class="form-control" id="feedback" name="feedback" rows="12"></textarea>
+                        </div>
+                        
+                    </div>
+                    <div class="form-group row">
+                            <div class="offset-md-2 col-md-10">
+                                <button type="submit" class="btn btn-primary"> Send Feedback</button>
+                            </div>
+                        </div>
+                </form>
             </div>
              <div class="col-12 col-md">
             </div>
