--- a/index.html
+++ b/index.html
@@ -23,15 +23,52 @@
             </button>
             <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="41"></a>
             <div class="collapse navbar-collapse" id="Navbar">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href=""><span class="fa fa-lg fa-home"></span> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"> <span class="fa fa-lg fa-info"></span> About</a></li>
                     <li class="nav-item"><a class="nav-link" href=""> <span class="fa fa-list fa-lg"></span> Menu</a></li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"> <span class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text"> 
+                    <a data-toggle="modal" data-target="#loginModal" href="">
+                        <span class="fa fa-sign-in"> Login</span>
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog" role="content">
+            <div class="modal-content ">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                        <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="exampleInputPassword3">Password</label>
+                        <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+                    </div>
+                    <div class="form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" type="checkbox"> Remember me
+                        </label>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-primary btn-sm">Sign in</button>
+            </div>
+            </div>
+        </div>
+    </div> <!-- END modal -->
 
     <header class="jumbotron">
         <div class="container">
@@ -44,13 +81,56 @@
                     <img src="img/logo.png" class="img-fluid alt="logo">
                 </div>
                 <div class="col col-sm-3 align-self-center">
-                	<a href="#reserve-table-card" class="btn btn-warning btn-block btn-sm" role="button"> Reserve Table</a>
+                	<a href="#reserve-table-card" class="btn btn-warning btn-block btn-sm" role="button" data-toggle="tooltip" data-html="true" title="Or Call us at <br> <strong>+49 15710020023</strong>" data-placement="bottom">  Reserve Table</a>
                 </div>
             </div>
         </div>
     </header>
 
     <div class="container">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/uthappizza.png" alt="uthappizza">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.00</span></h2>
+                                <p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                            </div>
+                        </div>
+
+                        <div class="carousel-item">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.00</span></h2>
+                                <p class="hidden-xs-down">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                            </div>
+                            <img class="d-block img-fluid" src="img/buffet.png" alt="buffet">
+                        </div>
+                                                   
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" src="img/alberto.png" alt="Alberto Somayya">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Alberto Somayya</h2>
+                                <h4>Executive Chef</h4>
+                                <p class="hidden-xs-down">Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2" ></li>
+                    </ol>
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon"></span>
+                    </a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3 flex-last">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -112,8 +192,7 @@
 				        			<input class="form-check-input" type="radio" name="guest1" id="guest1" value="guest1">
 				        			<label  class="form-check-label" for="guest1">1</label>
 				        		</div>	
-				        	
-				        			<div class="form-check form-check-inline">
+			        			<div class="form-check form-check-inline">
 				        			<input class="form-check-input" type="radio" name="guest1" id="guest2" value="guest2">
 				        			<label  class="form-check-label" for="guest1">2</label>
 				        		</div>
@@ -142,7 +221,7 @@
 			        			<div class="col-md-5  form-group">
 			        				<div class="input-group">
 			        					<div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-			        					<input class="form-control-md" type="text" name="date" id="date" placeholder="Date">
+			        					<input class="form-control-md mr-1" type="text" name="date" id="date" placeholder="Date">
 			        				</div>	        				
 			        			</div>
 			        			<div class="col-md-5 form-group">
@@ -215,6 +294,12 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
