--- a/contactus.html
+++ b/contactus.html
@@ -8,11 +8,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap-social.css">
     <link href="css/styles.css" rel="stylesheet">
-
+    <!-- endbuild -->
     <title>Ristorante Con Fusion: About Us</title>
 
 </head>
@@ -43,7 +44,7 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid alt="logo">
+                    <img src="img/logo.png" class="img-fluid" alt="logo">
                 </div>
             </div>
         </div>
@@ -207,9 +208,11 @@
     </footer>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
+     <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
