--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
+
         <!-- Bootstrap CSS -->
+        <!-- build:css css/main.css -->
         <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap-social.css">
+        <link rel="stylesheet" href="css/bootstrap-social.css">
         <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <!-- endbuild -->
         <title>Ristorante Con Fusion</title>
 </head>
 
@@ -162,7 +165,7 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col col-sm-3 align-self-center">
-                    <img src="img/logo.png" class="img-fluid alt="logo">
+                    <img src="img/logo.png" class="img-fluid" alt="logo">
                 </div>
                 <div class="col col-sm-3 align-self-center">
                 	<a href="#reserve-table-card" class="btn btn-warning btn-block btn-sm" role="button" data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
@@ -311,11 +314,12 @@
     </footer>
 
     <!-- jQuery first, then Tether, then Bootstrap JS -->
+    <!-- build:js js/main.js -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
-    
+    <!-- endbuild -->
 </body>
 
 </html>
